--- a/sass/base/_containers.scss
+++ b/sass/base/_containers.scss
@@ -12,3 +12,8 @@
     padding-left: 0.75rem;
     padding-right: 0.75rem;
 }
+.portfolio-container {
+    max-width: 123.75rem;
+    margin: 0 auto;
+    width: 100%;
+}
